# p1_outdoor

./: .gitignore  README.md
google_earth_parser/: kml_scrape.py  object_generator.py
google_earth_parser/kml_input/: outdoor_sim.kml
google_earth_parser/kml_output/: outdoor_sim.json
google_earth_parser/wbt_output/: outdoor_sim.wbt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/outdoor_simulation/lib/outdoor_simulation/: outdoor_simulation
install/outdoor_simulation/share/outdoor_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/outdoor_simulation/share/outdoor_simulation/launch/: outdoor_simulation_launch.py
install/outdoor_simulation/share/outdoor_simulation/worlds/: outdoor.wbt
log/: latest_build
src/outdoor_simulation/: setup.cfg  setup.py
src/outdoor_simulation/outdoor_simulation/: outdoor_simulation.py
src/outdoor_simulation/worlds/: outdoor.wbt
