<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>outdoor_simulation</name>
  <version>0.0.0</version>
  <description>Outdoor simulation for cs460/560 project 1</description>
  <maintainer email="ljhay314@gmail.com">rpi</maintainer>
  <license>TODO: License declaration</license>

  <!-- Testing dependencies -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Webots-related runtime dependencies -->
  <exec_depend>webots_ros2_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
